--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,7 +42,7 @@
                             Machine Learning Lab
                         </a>
                     </div>
-                    <div class="uk-navbar-right">
+                    <div class="uk-navbar-right uk-visible@l">
                         <ul class="uk-navbar-nav">
                             <li><a href="../index.html">Home</a></li>
                             <li><a href="../pages/about.html">About Us</a></li>
@@ -163,5 +163,48 @@
                 </form>
             </div>
         </section>
+
+        <!-- Footer -->
+        <!-- <footer
+            class="uk-section uk-section-secondary uk-light uk-margin-large-top uk-position-relative uk-position-bottom"
+        >
+            <div class="uk-container">
+                <div class="uk-grid-match uk-child-width-1-2@s" uk-grid>
+                    <div>
+                        <h3>Footer</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt.ratione
+                            mollitia eaque, soluta doloremque quidem. Lorem
+                            ipsum dolor sit amet consectetur adipisicing elit.
+                            Dolorem nam tempore quo itaque illo sunt porro
+                            commodi quisquam pariatur neque unde nulla odit
+                            recusandae velit, expedita esse! Minima, quod
+                            tempora. Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit.
+                        </p>
+                    </div>
+                    <div>
+                        <h3>Footer</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt.ratione
+                            mollitia eaque, soluta doloremque quidem. Lorem
+                            ipsum dolor sit amet consectetur adipisicing elit.
+                            Dolorem nam tempore quo itaque illo sunt porro
+                            commodi quisquam pariatur neque unde nulla odit
+                            recusandae velit, expedita esse! Minima, quod
+                            tempora. Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer> -->
+
+        <!-- UIkit JS -->
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit-icons.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     </body>
 </html>
