--- a/pages/publications.html
+++ b/pages/publications.html
@@ -13,17 +13,6 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/css/uikit.min.css"
         />
-
-        <!-- UIkit JS -->
-        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit-icons.min.js"></script>
-
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"
-            integrity="sha512-r22gChDnGvBylk90+2e/ycr3RVrDi8DIOkIGNhJlKfuyQM4tIRAI062MaV8sfjQKYVGjOBaZBOA87z+IhZE9DA=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
         <title>Publications</title>
     </head>
     <body>
@@ -41,7 +30,7 @@
                             Machine Learning Lab
                         </a>
                     </div>
-                    <div class="uk-navbar-right">
+                    <div class="uk-navbar-right uk-visible@l">
                         <ul class="uk-navbar-nav">
                             <li><a href="../index.html">Home</a></li>
                             <li><a href="./about.html">About Us</a></li>
@@ -127,6 +116,12 @@
                 </div>
             </div>
         </footer>
+
+        <!-- UIkit JS -->
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit-icons.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
         <script src="publications.js"></script>
     </body>
 </html>
