--- a/index.html
+++ b/index.html
@@ -13,17 +13,6 @@
             href="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/css/uikit.min.css"
         />
 
-        <!-- UIkit JS -->
-        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit-icons.min.js"></script>
-
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"
-            integrity="sha512-r22gChDnGvBylk90+2e/ycr3RVrDi8DIOkIGNhJlKfuyQM4tIRAI062MaV8sfjQKYVGjOBaZBOA87z+IhZE9DA=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
-
         <title>ML Lab</title>
     </head>
     <body>
@@ -33,16 +22,22 @@
                 <div uk-navbar>
                     <div class="uk-navbar-left">
                         <a
-                            class="uk-navbar-item uk-logo"
+                            class="uk-navbar-item uk-logo uk-flex uk-flex-center uk-flex-middle"
                             href="./index.html"
                             aria-label="Back to Home"
                         >
-                            <img src="./images/DTU.png" alt="DTU_Logo" />
-                            Machine Learning Lab
+                            <img
+                                src="./images/DTU.png"
+                                class="uk-margin-remove uk-margin-right@m"
+                                alt="DTU_Logo"
+                            />
+                            <span class="uk-text-small uk-text-large@m"
+                                >Machine Learning Laboratory</span
+                            >
                         </a>
                     </div>
                     <div class="uk-navbar-right">
-                        <ul class="uk-navbar-nav">
+                        <ul class="uk-navbar-nav uk-visible@m">
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./pages/about.html">About Us</a></li>
                             <li>
@@ -57,6 +52,49 @@
                                 <a href="./pages/contact.html">Contact Us</a>
                             </li>
                         </ul>
+                        <div class="uk-hidden@m">
+                            <button
+                                class="uk-icon-link"
+                                uk-icon="menu"
+                                uk-toggle="target:#offcanvas-bar"
+                            ></button>
+                        </div>
+                        <div
+                            id="offcanvas-bar"
+                            uk-offcanvas="overlay:true; flip:true; mode:reveal"
+                        >
+                            <div class="uk-offcanvas-bar">
+                                <button
+                                    class="uk-offcanvas-close"
+                                    uk-close
+                                ></button>
+                                <ul
+                                    class="uk-navbar-nav uk-flex uk-flex-column"
+                                >
+                                    <li><a href="./index.html">Home</a></li>
+                                    <li>
+                                        <a href="./pages/about.html"
+                                            >About Us</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="./pages/publications.html"
+                                            >Publications</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="./pages/research.html"
+                                            >Research</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="./pages/contact.html"
+                                            >Contact Us</a
+                                        >
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -79,36 +117,19 @@
             <div
                 class="uk-container uk-flex uk-flex-column uk-flex-center uk-flex-middle"
             >
-                <div class="uk-animation-toggle" tabindex="0">
-                    <img
-                        class="uk-animation-stroke"
-                        src="images/learning-machine-ai-icon.svg"
-                        width="3rem"
-                        height="3rem"
-                        style="color: white"
-                        uk-svg="stroke-animation: true"
-                    />
-                </div>
-                <h1
-                    class="cover-head uk-text-uppercase uk-text-bold"
-                    uk-scrollspy="cls:uk-animation-fade; delay:1000"
+                <div
+                    class="cover-head uk-text-uppercase uk-text-bold uk-text-center uk-heading-xlarge"
                 >
-                    Machine Learning
-                </h1>
-                <h1
-                    class="cover-head uk-text-uppercase uk-text-bold"
-                    uk-scrollspy="cls:uk-animation-fade; delay:1500"
-                >
+                    <span id="typewriter"></span><span id="cursor">|</span
+                    ><br />
                     Laboratory
-                </h1>
+                </div>
+
+                <div class="scroll-down"></div>
             </div>
         </div>
-        <div class="uk-container uk-padding-small">
-            <!-- <div class="uk-card uk-card-default uk-margin-bottom">
-                <div class="uk-card-body">
-                    <h3 class="uk-card-title">Heading</h3>
-                </div>
-            </div> -->
+
+        <div id="sec" class="uk-container uk-padding-small uk-margin-large-top">
             <div
                 class="uk-grid-small uk-child-width-1-3@m uk-flex uk-flex-wrap"
                 uk-grid="masonry:true"
@@ -391,6 +412,12 @@
         </footer>
 
         <!-- Scripts -->
+
+        <!-- UIkit JS -->
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit-icons.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
         <script src="./main.js"></script>
     </body>
 </html>
