--- a/pages/research.html
+++ b/pages/research.html
@@ -13,16 +13,6 @@
             href="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/css/uikit.min.css"
         />
 
-        <!-- UIkit JS -->
-        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit-icons.min.js"></script>
-
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"
-            integrity="sha512-r22gChDnGvBylk90+2e/ycr3RVrDi8DIOkIGNhJlKfuyQM4tIRAI062MaV8sfjQKYVGjOBaZBOA87z+IhZE9DA=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
         <title>Research</title>
     </head>
     <body>
@@ -40,7 +30,7 @@
                             Machine Learning Lab
                         </a>
                     </div>
-                    <div class="uk-navbar-right">
+                    <div class="uk-navbar-right uk-visible@l">
                         <ul class="uk-navbar-nav">
                             <li><a href="../index.html">Home</a></li>
                             <li><a href="./about.html">About Us</a></li>
@@ -77,6 +67,63 @@
             </div>
         </section>
 
-        <div class="uk-container uk-padding-small"></div>
+        <section class="uk-section uk-section-xlarge uk-section-secondary">
+            <div class="uk-container">
+                <h1>Research</h1>
+                <p>
+                    The research in the Machine Learning Lab is focused on
+                    developing machine learning algorithms for solving
+                    challenging problems in the field of computer vision and
+                    image processing. The research is carried out in close
+                    collaboration with the industry and the research is
+                    application driven. The research is carried out in close
+                    collaboration with the industry and the research is
+                    application driven.
+                </p>
+            </div>
+        </section>
+
+        <!-- Footer -->
+        <footer
+            class="uk-section uk-section-secondary uk-light uk-margin-large-top uk-position-relative uk-position-bottom"
+        >
+            <div class="uk-container">
+                <div class="uk-grid-match uk-child-width-1-2@s" uk-grid>
+                    <div>
+                        <h3>Footer</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt.ratione
+                            mollitia eaque, soluta doloremque quidem. Lorem
+                            ipsum dolor sit amet consectetur adipisicing elit.
+                            Dolorem nam tempore quo itaque illo sunt porro
+                            commodi quisquam pariatur neque unde nulla odit
+                            recusandae velit, expedita esse! Minima, quod
+                            tempora. Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit.
+                        </p>
+                    </div>
+                    <div>
+                        <h3>Footer</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt.ratione
+                            mollitia eaque, soluta doloremque quidem. Lorem
+                            ipsum dolor sit amet consectetur adipisicing elit.
+                            Dolorem nam tempore quo itaque illo sunt porro
+                            commodi quisquam pariatur neque unde nulla odit
+                            recusandae velit, expedita esse! Minima, quod
+                            tempora. Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <!-- UIkit JS -->
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit-icons.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     </body>
 </html>
