--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                                 class="uk-margin-remove uk-margin-right@m"
                                 alt="DTU_Logo"
                             />
-                            <span class="uk-text-small uk-text-large@m"
+                            <span
+                                class="uk-text-default uk-text-uppercase uk-text-large@m"
                                 >Machine Learning Laboratory</span
                             >
                         </a>
@@ -118,7 +119,7 @@
                 class="uk-container uk-flex uk-flex-column uk-flex-center uk-flex-middle"
             >
                 <div
-                    class="cover-head uk-text-uppercase uk-text-bold uk-text-center uk-heading-xlarge"
+                    class="cover-head uk-text-uppercase uk-text-bold uk-text-center uk-heading-medium"
                 >
                     <span id="typewriter"></span><span id="cursor">|</span
                     ><br />
