--- a/pages/publications.html
+++ b/pages/publications.html
@@ -22,16 +22,23 @@
                 <div uk-navbar>
                     <div class="uk-navbar-left">
                         <a
-                            class="uk-navbar-item uk-logo"
-                            href="./index.html"
+                            class="uk-navbar-item uk-logo uk-flex uk-flex-center uk-flex-middle"
+                            href="../index.html"
                             aria-label="Back to Home"
                         >
-                            <img src="../images/DTU.png" alt="DTU_Logo" />
-                            Machine Learning Lab
+                            <img
+                                src="../images/DTU.png"
+                                class="uk-margin-remove uk-margin-right@m"
+                                alt="DTU_Logo"
+                            />
+                            <span
+                                class="uk-text-default uk-text-uppercase uk-text-large@m"
+                                >Machine Learning Laboratory</span
+                            >
                         </a>
                     </div>
-                    <div class="uk-navbar-right uk-visible@l">
-                        <ul class="uk-navbar-nav">
+                    <div class="uk-navbar-right">
+                        <ul class="uk-navbar-nav uk-visible@m">
                             <li><a href="../index.html">Home</a></li>
                             <li><a href="./about.html">About Us</a></li>
                             <li>
@@ -44,6 +51,43 @@
                                 <a href="./contact.html">Contact Us</a>
                             </li>
                         </ul>
+                        <div class="uk-hidden@m">
+                            <button
+                                class="uk-icon-link"
+                                uk-icon="menu"
+                                uk-toggle="target:#offcanvas-bar"
+                            ></button>
+                        </div>
+                        <div
+                            id="offcanvas-bar"
+                            uk-offcanvas="overlay:true; flip:true; mode:reveal"
+                        >
+                            <div class="uk-offcanvas-bar">
+                                <button
+                                    class="uk-offcanvas-close"
+                                    uk-close
+                                ></button>
+                                <ul
+                                    class="uk-navbar-nav uk-flex uk-flex-column"
+                                >
+                                    <li><a href="../index.html">Home</a></li>
+                                    <li>
+                                        <a href="./about.html">About Us</a>
+                                    </li>
+                                    <li>
+                                        <a href="./publications.html"
+                                            >Publications</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="./research.html">Research</a>
+                                    </li>
+                                    <li>
+                                        <a href="./contact.html">Contact Us</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -51,22 +95,76 @@
 
         <div class="uk-container uk-padding-small">
             <div class="uk-card uk-card-default uk-margin-bottom">
-                <div
-                    class="uk-card-body uk-flex uk-flex-between uk-padding-small uk-flex-row uk-flex-center uk-flex-middle"
+                <!-- <div
+                    class="uk-card-body uk-flex uk-flex-between uk-padding-remove-vertical uk-flex-row uk-flex-center uk-flex-middle"
                 >
                     <h2 class="uk-text-uppercase publications-head">
                         Publications
                     </h2>
-                    <div class="uk-search uk-search-default">
-                        <span class="uk-search-icon-flip" uk-search-icon></span>
-                        <input
-                            class="uk-search-input"
-                            id="publications-search"
-                            type="text"
-                            placeholder="Search"
-                            aria-label="Search"
-                        />
+                    <span
+                        class="uk-navbar-toggle uk-link"
+                        uk-search-icon
+                    ></span>
+                    <div
+                        class="uk-navbar-dropdown uk-padding-small"
+                        uk-drop="mode: click; cls-drop: uk-navbar-dropdown; animation: reveal-top; animate-out: true; duration: 700; flip: true"
+                    >
+                        <div class="uk-grid-small uk-flex-middle" uk-grid>
+                            <div class="uk-width-expand">
+                                <div
+                                    class="uk-search uk-search-navbar uk-width-1-1"
+                                >
+                                    <input
+                                        id="publications-search"
+                                        class="uk-search-input"
+                                        type="search"
+                                        placeholder="Search"
+                                        aria-label="Search"
+                                        autofocus
+                                    />
+                                </div>
+                            </div>
+                            <div class="uk-width-auto">
+                                <a class="uk-drop-close" href="#" uk-close></a>
+                            </div>
+                        </div>
                     </div>
+                </div> -->
+                <div
+                    class="uk-card-body nav-overlay uk-flex uk-flex-between uk-padding-remove-vertical uk-flex-row uk-flex-center uk-flex-middle"
+                >
+                    <h2 class="uk-text-uppercase publications-head">
+                        Publications
+                    </h2>
+                    <div
+                        class="uk-navbar-toggle"
+                        uk-search-icon
+                        uk-toggle="target: .nav-overlay; animation: uk-animation-fade"
+                    ></div>
+                </div>
+
+                <div
+                    class="nav-overlay uk-navbar-left uk-flex-1 uk-padding uk-padding-remove-vertical"
+                    hidden
+                >
+                    <div class="uk-navbar-item uk-width-expand">
+                        <div class="uk-search uk-search-navbar uk-width-1-1">
+                            <input
+                                class="uk-search-input"
+                                id="publications-search"
+                                type="search"
+                                placeholder="Search"
+                                aria-label="Search"
+                                autofocus
+                            />
+                        </div>
+                    </div>
+
+                    <div
+                        class="uk-navbar-toggle"
+                        uk-close
+                        uk-toggle="target: .nav-overlay; animation: uk-animation-fade"
+                    ></div>
                 </div>
             </div>
             <!-- <div class="pagination"></div> -->
