--- a/pages/research.html
+++ b/pages/research.html
@@ -22,16 +22,23 @@
                 <div uk-navbar>
                     <div class="uk-navbar-left">
                         <a
-                            class="uk-navbar-item uk-logo"
-                            href="./index.html"
+                            class="uk-navbar-item uk-logo uk-flex uk-flex-center uk-flex-middle"
+                            href="../index.html"
                             aria-label="Back to Home"
                         >
-                            <img src="../images/DTU.png" alt="DTU_Logo" />
-                            Machine Learning Lab
+                            <img
+                                src="../images/DTU.png"
+                                class="uk-margin-remove uk-margin-right@m"
+                                alt="DTU_Logo"
+                            />
+                            <span
+                                class="uk-text-default uk-text-uppercase uk-text-large@m"
+                                >Machine Learning Laboratory</span
+                            >
                         </a>
                     </div>
-                    <div class="uk-navbar-right uk-visible@l">
-                        <ul class="uk-navbar-nav">
+                    <div class="uk-navbar-right">
+                        <ul class="uk-navbar-nav uk-visible@m">
                             <li><a href="../index.html">Home</a></li>
                             <li><a href="./about.html">About Us</a></li>
                             <li>
@@ -44,6 +51,43 @@
                                 <a href="./contact.html">Contact Us</a>
                             </li>
                         </ul>
+                        <div class="uk-hidden@m">
+                            <button
+                                class="uk-icon-link"
+                                uk-icon="menu"
+                                uk-toggle="target:#offcanvas-bar"
+                            ></button>
+                        </div>
+                        <div
+                            id="offcanvas-bar"
+                            uk-offcanvas="overlay:true; flip:true; mode:reveal"
+                        >
+                            <div class="uk-offcanvas-bar">
+                                <button
+                                    class="uk-offcanvas-close"
+                                    uk-close
+                                ></button>
+                                <ul
+                                    class="uk-navbar-nav uk-flex uk-flex-column"
+                                >
+                                    <li><a href="../index.html">Home</a></li>
+                                    <li>
+                                        <a href="./about.html">About Us</a>
+                                    </li>
+                                    <li>
+                                        <a href="./publications.html"
+                                            >Publications</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="./research.html">Research</a>
+                                    </li>
+                                    <li>
+                                        <a href="./contact.html">Contact Us</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -83,9 +127,41 @@
             </div>
         </section>
 
+        <section class="uk-section uk-section-xlarge uk-section-muted">
+            <div class="uk-container">
+                <h1>Research</h1>
+                <p>
+                    The research in the Machine Learning Lab is focused on
+                    developing machine learning algorithms for solving
+                    challenging problems in the field of computer vision and
+                    image processing. The research is carried out in close
+                    collaboration with the industry and the research is
+                    application driven. The research is carried out in close
+                    collaboration with the industry and the research is
+                    application driven.
+                </p>
+            </div>
+        </section>
+
+        <section class="uk-section uk-section-xlarge uk-section-primary">
+            <div class="uk-container">
+                <h1>Research</h1>
+                <p>
+                    The research in the Machine Learning Lab is focused on
+                    developing machine learning algorithms for solving
+                    challenging problems in the field of computer vision and
+                    image processing. The research is carried out in close
+                    collaboration with the industry and the research is
+                    application driven. The research is carried out in close
+                    collaboration with the industry and the research is
+                    application driven.
+                </p>
+            </div>
+        </section>
+
         <!-- Footer -->
         <footer
-            class="uk-section uk-section-secondary uk-light uk-margin-large-top uk-position-relative uk-position-bottom"
+            class="uk-section uk-section-secondary uk-light uk-position-relative uk-position-bottom"
         >
             <div class="uk-container">
                 <div class="uk-grid-match uk-child-width-1-2@s" uk-grid>
