--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                                 alt="DTU_Logo"
                             />
                             <span
-                                class="uk-text-default uk-text-uppercase uk-text-large@m"
-                                >Machine Learning Laboratory</span
+                                class="uk-text-large uk-text-bold uk-text-uppercase uk-text-large@m"
+                                >Machine Learning Research Lab</span
                             >
                         </a>
                     </div>
@@ -123,7 +123,7 @@
                 >
                     <span id="typewriter"></span><span id="cursor">|</span
                     ><br />
-                    Laboratory
+                    Research Laboratory
                 </div>
 
                 <div class="scroll-down"></div>
