changed about page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 alt="DTU_Logo"
                             />
                             <span
-                                class="uk-text-large uk-text-bold uk-text-uppercase uk-text-large@m"
+                                class="uk-text-default uk-text-bold uk-text-uppercase"
                                 >Machine Learning Research Lab</span
                             >
                         </a>
@@ -107,7 +107,7 @@
             uk-scrollspy="cls:uk-animation-fade; delay: 500"
         >
             <video
-                src="./videos/cover2.mp4"
+                src="./videos/cover.mp4"
                 autoplay
                 loop
                 muted
