--- a/pages/research.html
+++ b/pages/research.html
@@ -32,8 +32,8 @@
                                 alt="DTU_Logo"
                             />
                             <span
-                                class="uk-text-default uk-text-uppercase uk-text-large@m"
-                                >Machine Learning Laboratory</span
+                                class="uk-text-default uk-text-bold uk-text-uppercase"
+                                >Machine Learning Research Lab</span
                             >
                         </a>
                     </div>
