--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
         <title>ML Lab</title>
     </head>
     <body>
-        <!-- Navbar -->
+        <!-- Navbar Starts here -->
         <nav class="uk-navbar-container" uk-sticky>
             <div class="uk-container">
                 <div uk-navbar>
@@ -95,7 +95,12 @@
                 </div>
             </div>
         </nav>
+        <!-- Navbar Starts here -->
 
+
+        
+
+        <!-- About us starts here -->
         <section class="uk-section uk-section-xlarge">
             <div class="uk-container">
                 <div class="uk-grid-match uk-child-width-1-3@m" uk-grid>
@@ -107,11 +112,7 @@
                         </div>
                         <div class="">
                             <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Iusto nam odio molestiae
-                                veniam ipsum officiis quae maxime nostrum
-                                dignissimos eaque ab animi eum placeat nobis
-                                fugiat explicabo, ipsam consectetur magni.
+                                With a deep understanding of the latest advancements in machine learning, neural networks, and deep learning, our laboratory is at the forefront of cutting-edge research and development. We continuously explore new techniques, refine existing models, and apply our expertise to a wide range of applications, including computer vision, natural language processing, speech recognition, recommendation systems, and more.
                             </p>
                         </div>
                     </div>
@@ -139,7 +140,10 @@
                 </div>
             </div>
         </section>
+        <!-- About us ends here -->
 
+
+        <!-- Our team starts here -->
         <section class="uk-section">
             <div class="uk-container">
                 <div class="uk-text-bolder uk-h1 uk-text-primary">Our Team</div>
@@ -161,7 +165,7 @@
                         >
                             <img
                                 class="uk-border-circle"
-                                src="../images/tm1.jpg"
+                                src="..\images\prof anil sir.jpeg"
                                 width="200"
                                 height="200"
                                 alt=""
@@ -169,17 +173,18 @@
                         </div>
                         <div class="uk-width-expand">
                             <div class="uk-card-body">
-                                <h3 class="uk-card-title">Media Left</h3>
+                                <h3 class="uk-card-title">Prof. Anil Singh Parihar</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit, sed do eiusmod tempor
-                                    incididunt.
+                                    Professor at Delhi Technological University (Formerly DCE)
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
 
+
+
+                
                 <!-- Ph.D. Students -->
                 <div
                     class="uk-card uk-card-default uk-border-rounded uk-padding-large uk-padding-remove-vertical uk-margin"
@@ -199,7 +204,7 @@
                         >
                             <img
                                 class="uk-border-circle"
-                                src="../images/tm1.jpg"
+                                src="../images/kavinder sir.jpeg"
                                 width="150"
                                 height="150"
                                 alt=""
@@ -211,9 +216,9 @@
                                 <h4
                                     class="uk-margin-remove uk-text-bold uk-text-primary"
                                 >
-                                    Name of Student
+                                Kavinder Singh
                                 </h4>
-                                <p class="uk-margin-remove">Student of DTU</p>
+                                <p class="uk-margin-remove">Assistant professor</p>
                                 <p class="uk-margin-remove">
                                     Co-Advised with Dr. XYZ & Prof. ABC
                                 </p>
@@ -253,7 +258,7 @@
                         <div class="uk-margin uk-flex uk-flex-row uk-flex-wrap">
                             <img
                                 class="uk-border-circle"
-                                src="../images/tm1.jpg"
+                                src="../images/ashutosh pandey.jpeg"
                                 width="150"
                                 height="150"
                                 alt=""
@@ -265,9 +270,9 @@
                                 <h4
                                     class="uk-margin-remove uk-text-bold uk-text-primary"
                                 >
-                                    Name of Student
+                                Ashutosh Pandey
                                 </h4>
-                                <p class="uk-margin-remove">Student of DTU</p>
+                                <p class="uk-margin-remove">Graduate Research Assistant.</p>
                                 <p class="uk-margin-remove">
                                     Co-Advised with Dr. XYZ & Prof. ABC
                                 </p>
