--- a/pages/about.html
+++ b/pages/about.html
@@ -97,9 +97,6 @@
         </nav>
         <!-- Navbar Starts here -->
 
-
-        
-
         <!-- About us starts here -->
         <section class="uk-section uk-section-xlarge">
             <div class="uk-container">
@@ -112,7 +109,16 @@
                         </div>
                         <div class="">
                             <p>
-                                With a deep understanding of the latest advancements in machine learning, neural networks, and deep learning, our laboratory is at the forefront of cutting-edge research and development. We continuously explore new techniques, refine existing models, and apply our expertise to a wide range of applications, including computer vision, natural language processing, speech recognition, recommendation systems, and more.
+                                With a deep understanding of the latest
+                                advancements in machine learning, neural
+                                networks, and deep learning, our laboratory is
+                                at the forefront of cutting-edge research and
+                                development. We continuously explore new
+                                techniques, refine existing models, and apply
+                                our expertise to a wide range of applications,
+                                including computer vision, natural language
+                                processing, speech recognition, recommendation
+                                systems, and more.
                             </p>
                         </div>
                     </div>
@@ -141,7 +147,6 @@
             </div>
         </section>
         <!-- About us ends here -->
-
 
         <!-- Our team starts here -->
         <section class="uk-section">
@@ -173,18 +178,18 @@
                         </div>
                         <div class="uk-width-expand">
                             <div class="uk-card-body">
-                                <h3 class="uk-card-title">Prof. Anil Singh Parihar</h3>
+                                <h3 class="uk-card-title">
+                                    Prof. Anil Singh Parihar
+                                </h3>
                                 <p>
-                                    Professor at Delhi Technological University (Formerly DCE)
+                                    Professor at Delhi Technological University
+                                    (Formerly DCE)
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-
-
-                
                 <!-- Ph.D. Students -->
                 <div
                     class="uk-card uk-card-default uk-border-rounded uk-padding-large uk-padding-remove-vertical uk-margin"
@@ -216,9 +221,11 @@
                                 <h4
                                     class="uk-margin-remove uk-text-bold uk-text-primary"
                                 >
-                                Kavinder Singh
+                                    Kavinder Singh
                                 </h4>
-                                <p class="uk-margin-remove">Assistant professor</p>
+                                <p class="uk-margin-remove">
+                                    Assistant Professor
+                                </p>
                                 <p class="uk-margin-remove">
                                     Co-Advised with Dr. XYZ & Prof. ABC
                                 </p>
@@ -270,9 +277,11 @@
                                 <h4
                                     class="uk-margin-remove uk-text-bold uk-text-primary"
                                 >
-                                Ashutosh Pandey
+                                    Ashutosh Pandey
                                 </h4>
-                                <p class="uk-margin-remove">Graduate Research Assistant.</p>
+                                <p class="uk-margin-remove">
+                                    Graduate Research Assistant
+                                </p>
                                 <p class="uk-margin-remove">
                                     Co-Advised with Dr. XYZ & Prof. ABC
                                 </p>
