updated home page

--- a/index.html
+++ b/index.html
@@ -168,21 +168,23 @@
                 </div>
                 <div>
                     <div class="uk-card uk-card-default uk-card-hover">
-                        <div class="uk-card-body">
-                            <h3 class="uk-card-title">Media Bottom</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor
-                                incididunt.
-                            </p>
-                        </div>
-                        <div class="uk-card-media-bottom uk-padding-small">
+                        <div class="uk-card-media-top uk-padding-small">
                             <img
-                                src="images/tm1.jpg"
+                                src="images/newsIllust.png"
                                 width="1800"
-                                height="1200"
+                                height="1000"
                                 alt=""
                             />
+                        </div>
+                        <div class="uk-card-body">
+                            <h3 class="uk-heading-small uk-heading-divider">
+                                News and Updates
+                            </h3>
+                            <div
+                                class="uk-grid-small uk-margin-top uk-margin-bottom uk-child-width-1-1"
+                                uk-grid
+                                uk-scrollspy="cls: uk-animation-slide-right; target: .uk-card; delay: 150; repeat:false; margin:10%"
+                            ></div>
                         </div>
                         <div class="uk-card-footer">
                             <a href="#" class="uk-button uk-button-text"
