added image on home page

--- a/index.html
+++ b/index.html
@@ -195,29 +195,22 @@
                     <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-media-top uk-padding-small">
                             <img
-                                src="images/tm7.jpg"
+                                src="images/prof anil sir.jpeg"
                                 width="1800"
                                 height="1200"
                                 alt=""
                             />
                         </div>
                         <div class="uk-card-body">
-                            <h3 class="uk-card-title">Media Top</h3>
+                            <h3 class="uk-card-title">Prof. Anil Singh Parihar</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor
-                                incididunt.ratione mollitia eaque, soluta
-                                doloremque quidem. Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Dolorem nam
-                                tempore quo itaque illo sunt porro commodi
-                                quisquam pariatur neque unde nulla odit
-                                recusandae velit, expedita esse! Minima, quod
-                                tempora. Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit.
+                                Professor, Department of Computer Science & Engineering, Delhi Technological University
+                                <br>
+                                Areas of interest - Deep Learning, Pattern Recognition, Digital image processing, Soft computing, Evolutionary computing
                             </p>
                         </div>
                         <div class="uk-card-footer">
-                            <a href="#" class="uk-button uk-button-text"
+                            <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=JRr4wjoAAAAJ" class="uk-button uk-button-text" target="_blank"
                                 >Read more</a
                             >
                         </div>
@@ -374,13 +367,19 @@
             </div>
         </div>
 
-        <!-- Footer -->
+
+
+
+
+
+
+        <!-- Footer starts here -->
         <footer
             class="uk-section uk-section-secondary uk-light uk-margin-large-top uk-position-relative uk-position-bottom"
         >
             <div class="uk-container">
                 <div class="uk-grid-match uk-child-width-1-2@s" uk-grid>
-                    <div>
+                    <div class="uk-flex uk-">
                         <h3>Footer</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -410,7 +409,21 @@
                     </div>
                 </div>
             </div>
+            <div class="uk-flex uk-flex-center">© 2023 Machine Learning Laboratory. All rights reserved. | Privacy Policy | Terms of Use | Contact Us</div>
         </footer>
+        <!-- Footer ends here -->
+
+
+
+
+
+
+
+
+
+
+
+
 
         <!-- Scripts -->
 
