--- a/index.html
+++ b/index.html
@@ -376,42 +376,14 @@
 
 
         <!-- Footer starts here -->
-        <footer
-            class="uk-section uk-section-secondary uk-light uk-margin-large-top uk-position-relative uk-position-bottom"
-        >
-            <div class="uk-container">
-                <div class="uk-grid-match uk-child-width-1-2@s" uk-grid>
-                    <div class="uk-flex uk-">
-                        <h3>Footer</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit, sed do eiusmod tempor incididunt.ratione
-                            mollitia eaque, soluta doloremque quidem. Lorem
-                            ipsum dolor sit amet consectetur adipisicing elit.
-                            Dolorem nam tempore quo itaque illo sunt porro
-                            commodi quisquam pariatur neque unde nulla odit
-                            recusandae velit, expedita esse! Minima, quod
-                            tempora. Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit.
-                        </p>
-                    </div>
-                    <div>
-                        <h3>Footer</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit, sed do eiusmod tempor incididunt.ratione
-                            mollitia eaque, soluta doloremque quidem. Lorem
-                            ipsum dolor sit amet consectetur adipisicing elit.
-                            Dolorem nam tempore quo itaque illo sunt porro
-                            commodi quisquam pariatur neque unde nulla odit
-                            recusandae velit, expedita esse! Minima, quod
-                            tempora. Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit.
-                        </p>
-                    </div>
-                </div>
+        <footer class="uk-section uk-section-secondary uk-light uk-margin-large-top uk-position-relative uk-position-bottom">
+            <div style="text-align: center;">
+                <h3>Machine Learning Research Laboratory</h3>
+                <p>Delhi Technological University</p>
+                <p>Shahbad Daulatpur Village, Rohini, New Delhi, Delhi 110042</p>
+                <div>© 2023 Machine Learning Laboratory. All rights reserved. | Privacy Policy | Terms of Use | Contact Us</div>
             </div>
-            <div class="uk-flex uk-flex-center">© 2023 Machine Learning Laboratory. All rights reserved. | Privacy Policy | Terms of Use | Contact Us</div>
+                
         </footer>
         <!-- Footer ends here -->
 
