--- a/pages/about.html
+++ b/pages/about.html
@@ -1058,49 +1058,314 @@
                     </div>
                 </div>
 
+
+                <!-- Alumni Section begins here -->
+                <div
+                    class="uk-card uk-card-default uk-border-rounded uk-padding-large uk-padding-remove-vertical uk-margin"
+                >
+                    <div class="uk-card-header">
+                        <div class="uk-flex-middle" uk-grid>
+                            <div class="uk-width-expand">
+                                <h3 class="uk-card-title uk-text-bold">
+                                    Alumni
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="uk-child-width-1-3@m" uk-grid>
+                        <div
+                            class="uk-margin-bottom uk-margin-top uk-flex uk-flex-wrap"
+                        >
+                            <img
+                                class="uk-border-circle"
+                                src="../images/tm1.jpg"
+                                width="150"
+                                height="150"
+                                alt=""
+                            />
+
+                            <div
+                                class="uk-card-body uk-padding-remove uk-margin-left uk-flex uk-flex-column uk-flex-center"
+                            >
+                                <h4
+                                    class="uk-margin-remove uk-text-bold uk-text-primary"
+                                >
+                                    Name of Student
+                                </h4>
+                                <p class="uk-margin-remove">Student of DTU</p>
+                                <p class="uk-margin-remove">
+                                    Co-Advised with Dr. XYZ & Prof. ABC
+                                </p>
+                                <ul class="uk-iconnav">
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-text-secondary"
+                                            uk-icon="icon: github"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: linkedin"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: mail"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: google"
+                                        ></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="uk-margin uk-flex uk-flex-row uk-flex-wrap">
+                            <img
+                                class="uk-border-circle"
+                                src="../images/tm1.jpg"
+                                width="150"
+                                height="150"
+                                alt=""
+                            />
+
+                            <div
+                                class="uk-card-body uk-padding-remove uk-margin-left uk-flex uk-flex-column uk-flex-center"
+                            >
+                                <h4
+                                    class="uk-margin-remove uk-text-bold uk-text-primary"
+                                >
+                                    Name of Student
+                                </h4>
+                                <p class="uk-margin-remove">Student of DTU</p>
+                                <p class="uk-margin-remove">
+                                    Co-Advised with Dr. XYZ & Prof. ABC
+                                </p>
+                                <ul class="uk-iconnav">
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-text-secondary"
+                                            uk-icon="icon: github"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: linkedin"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: mail"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: google"
+                                        ></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="uk-margin uk-flex uk-flex-row uk-flex-wrap">
+                            <img
+                                class="uk-border-circle"
+                                src="../images/tm1.jpg"
+                                width="150"
+                                height="150"
+                                alt=""
+                            />
+
+                            <div
+                                class="uk-card-body uk-padding-remove uk-margin-left uk-flex uk-flex-column uk-flex-center"
+                            >
+                                <h4
+                                    class="uk-margin-remove uk-text-bold uk-text-primary"
+                                >
+                                    Name of Student
+                                </h4>
+                                <p class="uk-margin-remove">Student of DTU</p>
+                                <p class="uk-margin-remove">
+                                    Co-Advised with Dr. XYZ & Prof. ABC
+                                </p>
+                                <ul class="uk-iconnav">
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-text-secondary"
+                                            uk-icon="icon: github"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: linkedin"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: mail"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: google"
+                                        ></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="uk-margin uk-flex uk-flex-row uk-flex-wrap">
+                            <img
+                                class="uk-border-circle"
+                                src="../images/tm1.jpg"
+                                width="150"
+                                height="150"
+                                alt=""
+                            />
+
+                            <div
+                                class="uk-card-body uk-padding-remove uk-margin-left uk-flex uk-flex-column uk-flex-center"
+                            >
+                                <h4
+                                    class="uk-margin-remove uk-text-bold uk-text-primary"
+                                >
+                                    Name of Student
+                                </h4>
+                                <p class="uk-margin-remove">Student of DTU</p>
+                                <p class="uk-margin-remove">
+                                    Co-Advised with Dr. XYZ & Prof. ABC
+                                </p>
+                                <ul class="uk-iconnav">
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-text-secondary"
+                                            uk-icon="icon: github"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: linkedin"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: mail"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: google"
+                                        ></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="uk-margin uk-flex uk-flex-row uk-flex-wrap">
+                            <img
+                                class="uk-border-circle"
+                                src="../images/tm1.jpg"
+                                width="150"
+                                height="150"
+                                alt=""
+                            />
+
+                            <div
+                                class="uk-card-body uk-padding-remove uk-margin-left uk-flex uk-flex-column uk-flex-center"
+                            >
+                                <h4
+                                    class="uk-margin-remove uk-text-bold uk-text-primary"
+                                >
+                                    Name of Student
+                                </h4>
+                                <p class="uk-margin-remove">Student of DTU</p>
+                                <p class="uk-margin-remove">
+                                    Co-Advised with Dr. XYZ & Prof. ABC
+                                </p>
+                                <ul class="uk-iconnav">
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-text-secondary"
+                                            uk-icon="icon: github"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: linkedin"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: mail"
+                                        ></a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
+                                            uk-icon="icon: google"
+                                        ></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Alumni Section begins here -->
+
                 <!-- end of team members -->
             </div>
         </section>
 
-        <!-- Footer -->
-        <footer
-            class="uk-section uk-section-secondary uk-light uk-margin-large-top uk-position-relative uk-position-bottom"
-        >
-            <div class="uk-container">
-                <div class="uk-grid-match uk-child-width-1-2@s" uk-grid>
-                    <div>
-                        <h3>Footer</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit, sed do eiusmod tempor incididunt.ratione
-                            mollitia eaque, soluta doloremque quidem. Lorem
-                            ipsum dolor sit amet consectetur adipisicing elit.
-                            Dolorem nam tempore quo itaque illo sunt porro
-                            commodi quisquam pariatur neque unde nulla odit
-                            recusandae velit, expedita esse! Minima, quod
-                            tempora. Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit.
-                        </p>
-                    </div>
-                    <div>
-                        <h3>Footer</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit, sed do eiusmod tempor incididunt.ratione
-                            mollitia eaque, soluta doloremque quidem. Lorem
-                            ipsum dolor sit amet consectetur adipisicing elit.
-                            Dolorem nam tempore quo itaque illo sunt porro
-                            commodi quisquam pariatur neque unde nulla odit
-                            recusandae velit, expedita esse! Minima, quod
-                            tempora. Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit.
-                        </p>
-                    </div>
-                </div>
+        <!-- Footer starts here -->
+        <footer class="uk-section uk-section-secondary uk-light uk-margin-large-top uk-position-relative uk-position-bottom">
+            <div style="text-align: center;">
+                <h3>Machine Learning Research Laboratory</h3>
+                <p>Delhi Technological University</p>
+                <p>Shahbad Daulatpur Village, Rohini, New Delhi, Delhi 110042</p>
+                <div>© 2023 Machine Learning Laboratory. All rights reserved. | Privacy Policy | Terms of Use | Contact Us</div>
             </div>
+                
         </footer>
+        <!-- Footer ends here -->
 
         <!-- End of achievements section -->
+
 
         <!-- UIkit JS -->
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.15/dist/js/uikit.min.js"></script>
