added new images on about us page

--- a/pages/about.html
+++ b/pages/about.html
@@ -321,7 +321,7 @@
                         <div class="uk-margin uk-flex uk-flex-row uk-flex-wrap">
                             <img
                                 class="uk-border-circle"
-                                src="../images/tm1.jpg"
+                                src="../images/nihal kumar.jpg"
                                 width="150"
                                 height="150"
                                 alt=""
@@ -333,9 +333,9 @@
                                 <h4
                                     class="uk-margin-remove uk-text-bold uk-text-primary"
                                 >
-                                    Name of Student
+                                    Nihal Kumar
                                 </h4>
-                                <p class="uk-margin-remove">Student of DTU</p>
+                                <p class="uk-margin-remove">Research Scholar</p>
                                 <p class="uk-margin-remove">
                                     Co-Advised with Dr. XYZ & Prof. ABC
                                 </p>
@@ -375,7 +375,7 @@
                         <div class="uk-margin uk-flex uk-flex-row uk-flex-wrap">
                             <img
                                 class="uk-border-circle"
-                                src="../images/tm1.jpg"
+                                src="../images/aman pandey.jpg"
                                 width="150"
                                 height="150"
                                 alt=""
@@ -387,9 +387,9 @@
                                 <h4
                                     class="uk-margin-remove uk-text-bold uk-text-primary"
                                 >
-                                    Name of Student
+                                    Aman Kr. Pandey
                                 </h4>
-                                <p class="uk-margin-remove">Student of DTU</p>
+                                <p class="uk-margin-remove">Assistant Professor</p>
                                 <p class="uk-margin-remove">
                                     Co-Advised with Dr. XYZ & Prof. ABC
                                 </p>
@@ -426,59 +426,7 @@
                             </div>
                         </div>
 
-                        <div class="uk-margin uk-flex uk-flex-row uk-flex-wrap">
-                            <img
-                                class="uk-border-circle"
-                                src="../images/tm1.jpg"
-                                width="150"
-                                height="150"
-                                alt=""
-                            />
 
-                            <div
-                                class="uk-card-body uk-padding-remove uk-margin-left uk-flex uk-flex-column uk-flex-center"
-                            >
-                                <h4
-                                    class="uk-margin-remove uk-text-bold uk-text-primary"
-                                >
-                                    Name of Student
-                                </h4>
-                                <p class="uk-margin-remove">Student of DTU</p>
-                                <p class="uk-margin-remove">
-                                    Co-Advised with Dr. XYZ & Prof. ABC
-                                </p>
-                                <ul class="uk-iconnav">
-                                    <li>
-                                        <a
-                                            href="#"
-                                            class="uk-icon-button uk-text-secondary"
-                                            uk-icon="icon: github"
-                                        ></a>
-                                    </li>
-                                    <li>
-                                        <a
-                                            href="#"
-                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
-                                            uk-icon="icon: linkedin"
-                                        ></a>
-                                    </li>
-                                    <li>
-                                        <a
-                                            href="#"
-                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
-                                            uk-icon="icon: mail"
-                                        ></a>
-                                    </li>
-                                    <li>
-                                        <a
-                                            href="#"
-                                            class="uk-icon-button uk-link-toggle uk-text-secondary"
-                                            uk-icon="icon: google"
-                                        ></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
                     </div>
                 </div>
 
