updated contact us

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -209,15 +209,14 @@
         </section>
 
         <!-- Footer starts here -->
-        <!-- <footer class="uk-section uk-section-secondary uk-light uk-margin-large-top uk-position-relative uk-position-bottom">
+        <footer class="uk-section uk-section-secondary uk-light uk-margin-large-top uk-position-relative uk-position-bottom">
             <div style="text-align: center;">
                 <h3>Machine Learning Research Laboratory</h3>
                 <p>Delhi Technological University</p>
                 <p>Shahbad Daulatpur Village, Rohini, New Delhi, Delhi 110042</p>
                 <div>© 2023 Machine Learning Laboratory. All rights reserved. | Privacy Policy | Terms of Use | Contact Us</div>
             </div>
-                
-        </footer> -->
+        </footer>
         <!-- Footer ends here -->
 
         <!-- UIkit JS -->
